<package>
  <name>hark_sound_source_localization</name>
  <description> Do sound source localization using HARK. </description>
  <version>0.0.1</version>

  <author>Sammy Pfeiffer</author>
  <maintainer email="Sammy.Pfeiffer@student.uts.edu.au">Sammy Pfeiffer</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>harkfd</run_depend>
  <run_depend>hark-ros-hydro</run_depend>

</package>


